--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,17 +1,3 @@
-@-webkit-keyframes animate {
-  0% {
-    opacity: 0;
-    -webkit-transform: rotate(45deg) translate(-20px, -20px);
-  }
-  50% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-    -webkit-transform: rotate(45deg) translate(20px, 20px);
-  }
-}
-
 @keyframes animate {
   0% {
     opacity: 0;
@@ -86,27 +72,41 @@
     // top: 80%;
     // left: 50%;
     margin-bottom: 3%;
-    -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
+    @media @phone {
+      display: none;
+    }
     span {
       display: block;
       width: 30px;
       height: 30px;
       border-bottom: 5px solid @complementary;
       border-right: 5px solid @complementary;
-      -webkit-transform: rotate(45deg);
       transform: rotate(45deg);
       margin: -10px;
-      -webkit-animation: animate 2s infinite;
       animation: animate 2s infinite;
     }
     span:nth-child(2) {
-      -webkit-animation-delay: -0.2s;
       animation-delay: -0.2s;
     }
     span:nth-child(3) {
-      -webkit-animation-delay: -0.4s;
       animation-delay: -0.4s;
+    }
+  }
+  .arrow-mobile {
+    margin-bottom: 3%;
+    display: none;
+    @media @phone {
+      display: block;
+    }
+    span {
+      display: block;
+      width: 30px;
+      height: 30px;
+      border-bottom: 5px solid @complementary;
+      border-right: 5px solid @complementary;
+      transform: rotate(45deg);
+      margin: -5px;
     }
   }
   .navigation {
