--- a/css/index.css
+++ b/css/index.css
@@ -186,7 +186,7 @@ p {
   background: linear-gradient(to bottom, #cc5500, #ff791a);
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
 }
 @media (max-width: 550px) {
@@ -201,9 +201,9 @@ p {
 }
 .nav .nav-text {
   max-width: 50%;
-  padding-bottom: 5%;
+  padding-bottom: 10px;
   font-family: "Source Sans Pro", sans-serif;
-  font-size: 2.9rem;
+  font-size: 2.2rem;
   text-align: center;
 }
 @media (max-width: 550px) {
@@ -217,8 +217,8 @@ p {
 .nav .nav-title {
   font-family: "Chivo", sans-serif;
   font-style: italic;
-  font-size: 8rem;
-  margin-top: 10%;
+  font-size: 6rem;
+  margin-top: 1%;
 }
 @media (max-width: 550px) {
   .nav .nav-title {
@@ -239,6 +239,16 @@ p {
     text-align: center;
     margin-bottom: 2%;
     font-size: 2rem;
+  }
+}
+.nav .nav-profilepic {
+  height: 180px;
+  border-radius: 50%;
+  margin-bottom: 80px;
+}
+@media (max-width: 800px) {
+  .nav .nav-profilepic {
+    display: none;
   }
 }
 .nav .arrow {
@@ -289,7 +299,7 @@ p {
   height: 5%;
   display: flex;
   margin-bottom: 1%;
-  margin-top: 2%;
+  margin-top: 10px;
 }
 @media (max-width: 550px) {
   .nav .navigation {
