--- a/less/navigation.less
+++ b/less/navigation.less
@@ -19,7 +19,7 @@
   background: linear-gradient(to bottom, #cc5500, #ff791a);
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
 
   @media @phone {
@@ -32,9 +32,9 @@
   }
   .nav-text {
     max-width: 50%;
-    padding-bottom: 5%;
+    padding-bottom: 10px;
     font-family: "Source Sans Pro", sans-serif;
-    font-size: 2.9rem;
+    font-size: 2.2rem;
     text-align: center;
     @media @phone {
       font-size: 2.4rem;
@@ -47,8 +47,8 @@
   .nav-title {
     font-family: "Chivo", sans-serif;
     font-style: italic;
-    font-size: 8rem;
-    margin-top: 10%;
+    font-size: 6rem;
+    margin-top: 1%;
     @media @phone {
       font-size: 4rem;
       width: 100%;
@@ -65,6 +65,14 @@
       text-align: center;
       margin-bottom: 2%;
       font-size: 2rem;
+    }
+  }
+  .nav-profilepic {
+    height: 180px;
+    border-radius: 50%;
+    margin-bottom: 80px;
+    @media @tablet {
+      display: none;
     }
   }
   .arrow {
@@ -115,7 +123,7 @@
     display: flex;
     // justify-self: flex-end;
     margin-bottom: 1%;
-    margin-top: 2%;
+    margin-top: 10px;
     @media @phone {
       display: none;
     }
