--- a/less/navigation.less
+++ b/less/navigation.less
@@ -37,10 +37,17 @@
     font-size: 2.2rem;
     text-align: center;
     @media @phone {
-      font-size: 2.4rem;
-      margin-top: 15%;
+      font-size: 2.2rem;
+      margin-top: 10%;
       margin-bottom: 7%;
       max-width: 90%;
+    }
+  }
+
+  .nav-skills {
+    font-weight: bold;
+    @media @phone {
+      
     }
   }
 
@@ -50,7 +57,8 @@
     font-size: 6rem;
     margin-top: 1%;
     @media @phone {
-      font-size: 4rem;
+      margin-top: 10%;
+      font-size: 4.5rem;
       width: 100%;
       text-align: center;
     }
